--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,24 @@ template {
     min-width: 1140px;
     width: 100%;
 }
+@media screen and (max-width: 900px){
+	
+	html {
+    line-height: 1.15;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    min-width: 500px;
+	}
+ 
+   .block-content {
+    min-width: 320px;
+    margin: 0;
+}
+ 
+	
+}
+
+
 body{background-image: url(img/overlay.png), linear-gradient(45deg, #191f39 15%, #474d61 85%);font-family: 'bazhanovc';}
 .block-content{
     max-width: 1140px;
@@ -515,6 +533,10 @@ font-weight: bold;
     font-style: normal;
 
 }
+@media screen and (max-width: 900px){
+.phone-ico{right: 13px;}
+}
+.phone-ico{background: url(img/phone.png) no-repeat;width: 60px;height: 60px;position:  fixed;background-size:  cover;right: 130px;bottom: 150px;z-index: 999999;}
 /*COMMON-END*/
 
 /*HEAD-START*/
@@ -536,7 +558,14 @@ font-weight: bold;
 }
 .block-head .ab-foto{background:url(img/My.jpg)no-repeat;width: 40%;float: right;height: 670px;background-size: 100%;}
 
-
+@media screen and (max-width: 900px){
+	.block-head{
+    padding-top: 0;
+}
+.block-head .ab-foto{
+	height: 216px;
+}	
+}
 /*HEAD-END*/
 
 /*MENU*/
@@ -590,6 +619,16 @@ font-weight: bold;
     background-size:  cover;
     margin-right: 20px;
 }
+
+@media screen and (max-width: 900px){
+.block-retro .foto {width: 100%;background-size:  100%;height: 227px;margin: 0;}
+	.block-retro .video {
+	width: 100%;
+	background-size: 100%;
+	height: 227px;
+	margin: 0;
+	}
+}
 /*RETRO-END*/
 
 
@@ -597,45 +636,18 @@ font-weight: bold;
 .block-foto{
     position:  relative;
 }
-.block-foto .album{position:  relative;/* height: 520px; */background: black;}
+.block-foto .album{position:  relative; background: black;}
 .block-foto .elem{
     width: 33%;
     float:  left;
 }
 .block-foto .image{
-    height: 560px;
-    background-size: 100%!important;
-    /* float:  left; */
-    padding: 30px;
-    width:  100%;
+ 
     margin:  auto;
+    display:  block;
 }
-.block-foto .report .f1{
-    background: url(img/slide/report/1.jpg) no-repeat;
-}
-.block-foto .report .f2{background: url(img/slide/report/2.jpg) no-repeat;/* background-size: cover; */}
-.block-foto .report .f3{background: url(img/slide/report/3.jpg) no-repeat;}
-.block-foto .report .f4{background: url(img/slide/report/4.jpg) no-repeat;}
-.block-foto .report .f5{background: url(img/slide/report/5.jpg) no-repeat;}
-.block-foto .report .f6{background: url(img/slide/report/6.jpg) no-repeat;}
-.block-foto .report .f7{background: url(img/slide/report/7.jpg) no-repeat;}
-.block-foto .report .f8{background: url(img/slide/report/8.jpg) no-repeat;}
-.block-foto .report .f9{background: url(img/slide/report/9.jpg) no-repeat;}
-.block-foto .report .f10{background: url(img/slide/report/10.jpg) no-repeat;}
-.block-foto .report .f11{background: url(img/slide/report/11.jpg) no-repeat;}
-.block-foto .report .f12{background: url(img/slide/report/12.jpg) no-repeat;}
-.block-foto .report .f13{background: url(img/slide/report/13.jpg) no-repeat;}
-.block-foto .report .f14{background: url(img/slide/report/14.jpg) no-repeat;}
-.block-foto .report .f15{background: url(img/slide/report/15.jpg) no-repeat;}
-.block-foto .report .f16{background: url(img/slide/report/16.jpg) no-repeat;}
-.block-foto .report .f17{background: url(img/slide/report/17.jpg) no-repeat;}
-.block-foto .report .f18{background: url(img/slide/report/18.jpg) no-repeat;}
-.block-foto .report .f19{background: url(img/slide/report/19.jpg) no-repeat;}
-.block-foto .report .f20{background: url(img/slide/report/20.jpg) no-repeat;}
+ 
+ 
 
-.block-foto .img-size {
-    /* width:  200px; */
-    /* height:  200px; */
-    /* display:  block; */
-}
+ 
 /*FOTO-END*/
