--- a/css/style.css
+++ b/css/style.css
@@ -1,653 +1,123 @@
-/**NORMALIZE*/
-
-/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in
- *    IE on Windows Phone and in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers (opinionated).
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Add the correct display in IE 9-.
- */
-
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+body{margin:0;}
 article,
 aside,
 footer,
 header,
 nav,
-section {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- * 1. Add the correct display in IE.
- */
-
+section{display:block;}
+h1{font-size:2em;margin:0.67em 0;}
 figcaption,
 figure,
-main { /* 1 */
-  display: block;
-}
-
-/**
- * Add the correct margin in IE 8.
- */
-
-figure {
-  margin: 1em 40px;
-}
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * 1. Remove the gray background on active links in IE 10.
- * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
- */
-
-a {
-  background-color: transparent; /* 1 */
-  -webkit-text-decoration-skip: objects; /* 2 */
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
-
+main{display:block;}
+figure{margin:1em 40px;}
+hr{box-sizing:content-box;height:0;overflow:visible;}
+pre{font-family:monospace, monospace;font-size:1em;}
+a{background-color:transparent;-webkit-text-decoration-skip:objects;}
+abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted;}
 b,
-strong {
-  font-weight: inherit;
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
+strong{font-weight:inherit;}
 b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
+strong{font-weight:bolder;}
 code,
 kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font style in Android 4.3-.
- */
-
-dfn {
-  font-style: italic;
-}
-
-/**
- * Add the correct background and color in IE 9-.
- */
-
-mark {
-  background-color: #ff0;
-  color: #000;
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
+samp{font-family:monospace, monospace;font-size:1em;}
+dfn{font-style:italic;}
+mark{background-color:#ff0;color:#000;}
+small{font-size:80%;}
 sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- */
-
+sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
+sub{bottom:-0.25em;}
+sup{top:-0.5em;}
 audio,
-video {
-  display: inline-block;
-}
-
-/**
- * Add the correct display in iOS 4-7.
- */
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/**
- * Remove the border on images inside links in IE 10-.
- */
-
-img {
-  border-style: none;
-}
-
-/**
- * Hide the overflow in IE.
- */
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers (opinionated).
- * 2. Remove the margin in Firefox and Safari.
- */
-
+video{display:inline-block;}
+audio:not([controls]){display:none;height:0;}
+img{border-style:none;}
+svg:not(:root){overflow:hidden;}
 button,
 input,
 optgroup,
 select,
-textarea {
-  font-family: sans-serif; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
+textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0;}
 button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
+input{overflow:visible;}
 button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS and Safari.
- */
-
+select{text-transform:none;}
 button,
-html [type="button"], /* 1 */
+html [type="button"],
 [type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
+[type="submit"]{-webkit-appearance:button;}
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
+[type="submit"]::-moz-focus-inner{border-style:none;padding:0;}
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * 1. Add the correct display in IE 9-.
- * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
-
-/**
- * Remove the default vertical scrollbar in IE.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10-.
- * 2. Remove the padding in IE 10-.
- */
-
+[type="submit"]:-moz-focusring{outline:1px dotted ButtonText;}
+fieldset{padding:0.35em 0.75em 0.625em;}
+legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}
+progress{display:inline-block;vertical-align:baseline;}
+textarea{overflow:auto;}
 [type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
+[type="radio"]{box-sizing:border-box;padding:0;}
 [type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
- */
-
+[type="number"]::-webkit-outer-spin-button{height:auto;}
+[type="search"]{-webkit-appearance:textfield;outline-offset:-2px;}
 [type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}
+::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}
+details,
+menu{display:block;}
+summary{display:list-item;}
+canvas{display:inline-block;}
+template{display:none;}
+[hidden]{display:none;}
+@media screen and (min-width:901px){html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;min-width:1140px;width:100%;}
+@media screen and (max-width:900px){html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;min-width:500px;}
+.block-content{min-width:320px;margin:0;}
 }
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
+body{background-image:url(img/overlay.png), linear-gradient(45deg, #191f39 15%, #474d61 85%);font-family:'bazhanovc';}
+.block-content{max-width:1140px;margin:auto;}
 }
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- */
-
-details, /* 1 */
-menu {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Scripting
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- */
-
-canvas {
-  display: inline-block;
-}
-
-/**
- * Add the correct display in IE.
- */
-
-template {
-  display: none;
-}
-
-/* Hidden
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10-.
- */
-
-[hidden] {
-  display: none;
-}
-
-/*NORMALIZE-END*/
-/*common*/
-@media screen and (min-width: 901px) {
-	html {
-    line-height: 1.15;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    min-width: 1140px;
-    width: 100%;
-}
-@media screen and (max-width: 900px){
-	
-	html {
-    line-height: 1.15;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    min-width: 500px;
-	}
- 
-   .block-content {
-    min-width: 320px;
-    margin: 0;
-}
- 
-	
-}
-
-
-body{background-image: url(img/overlay.png), linear-gradient(45deg, #191f39 15%, #474d61 85%);font-family: 'bazhanovc';}
-.block-content{
-    max-width: 1140px;
-    margin:  auto;
-}
-
-	
-}
-.clear{
-	clear:both;
-}
-.black-head {
-    text-align:  center;
-    color:  white;
-    font-size:  32px;
-    font-weight:  bold;
-    text-transform:  uppercase;
-    padding: 20px 0px;
-}
-.header{
-	
-text-align:  center;
-	
-padding:  20px;
-	
-font-size:  32px;
-	
-font-weight: bold;
-}
-.sub-header{
-    text-align:  center;
-    font-size: 20px;
-}
-.pull-left {float: left;}
+.clear{clear:both;}
+.black-head{text-align:center;color:white;font-size:32px;font-weight:bold;text-transform:uppercase;padding:20px 0px;}
+.header{text-align:center;padding:20px;font-size:32px;font-weight:bold;}
+.sub-header{text-align:center;font-size:20px;}
+.pull-left{float:left;}
 .pull-right{float:right;}
 .bg-white{background:white;}
 .bg-black{background:black;}
-@font-face {
-    font-family: 'bazhanovcregular';
-    src: url('bazhanovc-webfont.woff2') format('woff2'),
-         url('bazhanovc-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
+@font-face{font-family:'bazhanovcregular';src:url('bazhanovc-webfont.woff2') format('woff2'),
+url('bazhanovc-webfont.woff') format('woff');font-weight:normal;font-style:normal;}
+@font-face{font-family:'bazhanovcbold';src:url('bazhanovc-bold-webfont.woff2') format('woff2'),
+url('bazhanovc-bold-webfont.woff') format('woff');font-weight:normal;font-style:normal;}
+.phone-ico{background:url(img/phone.png) no-repeat;width:60px;height:60px;position:fixed;background-size:cover;right:130px;bottom:150px;z-index:999999;}
+@media screen and (max-width:900px){.phone-ico{right:13px;}
 }
 
-
-
-
-@font-face {
-    font-family: 'bazhanovcbold';
-    src: url('bazhanovc-bold-webfont.woff2') format('woff2'),
-         url('bazhanovc-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
+.block-head{padding-top:50px;}
+.block-head .head-foto{background:url(img/Sneg-1.jpg)no-repeat 18% 50%;width:100%;height:300px;background-size:cover;}
+.block-head .about{background:white;}
+.block-head .ab-left{float:left;width:60%;}
+.block-head .ab-text{text-align:center;margin:auto;}
+.block-head .ab-foto{background:url(img/My.jpg)no-repeat;width:40%;float:right;height:670px;background-size:100%;}
+@media screen and (max-width:900px){.block-head{padding-top:0;}
+.block-head .ab-foto{height:216px;}
 }
-@media screen and (max-width: 900px){
-.phone-ico{right: 13px;}
+.block-menu{}
+.block-menu .m-logo{display:block;text-decoration:none;color:black;margin:auto;text-align:center;font-weight:bold;}
+.block-menu .menu{background:#f7f7f7;padding:30px 0px;}
+.block-menu .m-logo:hover{border-radius:50px;background:#bfafaf;}
+.block-menu .m-elem{float:left;width:33.3%;}
+.block-retro{}
+.block-retro .elem{background:black;padding-bottom:30px;}
+.block-retro .foto{background:url(img/foto.jpg) no-repeat;width:47%;height:335px;margin-left:20px;background-size:cover;}
+.block-retro .video{background:url(img/vid.jpg) no-repeat;width:47%;height:335px;background-size:cover;margin-right:20px;}
+@media screen and (max-width:900px){.block-retro .foto{width:100%;background-size:100%;height:227px;margin:0;}
+.block-retro .video{width:100%;background-size:100%;height:227px;margin:0;}
 }
-.phone-ico{background: url(img/phone.png) no-repeat;width: 60px;height: 60px;position:  fixed;background-size:  cover;right: 130px;bottom: 150px;z-index: 999999;}
-/*COMMON-END*/
-
-/*HEAD-START*/
-
-.block-head{
-    padding-top: 50px;
-}
-.block-head .head-foto{background: url(img/Sneg-1.jpg)no-repeat 18% 50%;width:  100%;height: 300px;background-size:  cover;}
-.block-head .about {
-	background:white;
-}
-.block-head .ab-left{
-	float:left;
-	width: 60%;
-}
-.block-head .ab-text{
-	text-align:center;
-	margin:  auto;
-}
-.block-head .ab-foto{background:url(img/My.jpg)no-repeat;width: 40%;float: right;height: 670px;background-size: 100%;}
-
-@media screen and (max-width: 900px){
-	.block-head{
-    padding-top: 0;
-}
-.block-head .ab-foto{
-	height: 216px;
-}	
-}
-/*HEAD-END*/
-
-/*MENU*/
-.block-menu{
-}
-.block-menu .m-logo{
-    display:  block;
-    text-decoration: none;
-    color: black;
-    margin:  auto;
-    text-align:  center;
-    font-weight:  bold;
-}
-
-.block-menu .menu{
-    background: #f7f7f7;
-    padding: 30px 0px;
-}
-.block-menu .m-logo:hover{
-    border-radius:  50px;
-    background: #bfafaf;
-}
-.block-menu .m-elem{
-    float: left;
-    width: 33.3%;
-}
-
-/*MENU END*/
-
-
-/*RETRO*/
-
-.block-retro {
-    /* background:  black; */
-}
-.block-retro .elem{
-    background: black;
-    padding-bottom: 30px;
-}
-.block-retro .foto {
-    background: url(img/foto.jpg) no-repeat;
-    width: 47%;
-    height: 335px;
-    margin-left: 20px;
-    background-size: cover;
-}
-.block-retro .video {
-    background: url(img/vid.jpg) no-repeat;
-    width: 47%;
-    height: 335px;
-    background-size:  cover;
-    margin-right: 20px;
-}
-
-@media screen and (max-width: 900px){
-.block-retro .foto {width: 100%;background-size:  100%;height: 227px;margin: 0;}
-	.block-retro .video {
-	width: 100%;
-	background-size: 100%;
-	height: 227px;
-	margin: 0;
-	}
-}
-/*RETRO-END*/
-
-
-/*FOTO*/
-.block-foto{
-    position:  relative;
-}
-.block-foto .album{position:  relative; background: black;}
-.block-foto .elem{
-    width: 33%;
-    float:  left;
-}
-.block-foto .image{
- 
-    margin:  auto;
-    display:  block;
-}
- 
- 
-
- 
-/*FOTO-END*/
+.block-foto{position:relative;}
+.block-foto .album{position:relative;background:black;}
+.block-foto .elem{width:33%;float:left;}
+.block-foto .image{margin:auto;display:block;}
