--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;min-width: 320px;}
 body{margin:0;}
 article,
 aside,
