--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;min-width: 320px;}
 body{margin:0;}
 article,
 aside,
@@ -92,7 +92,7 @@ body{background-image:url(img/overlay.png), linear-gradient(45deg, #191f39 15%, 
 url('bazhanovc-webfont.woff') format('woff');font-weight:normal;font-style:normal;}
 @font-face{font-family:'bazhanovcbold';src:url('bazhanovc-bold-webfont.woff2') format('woff2'),
 url('bazhanovc-bold-webfont.woff') format('woff');font-weight:normal;font-style:normal;}
-.phone-ico{background:url(img/phone.png) no-repeat;width:60px;height:60px;position:fixed;background-size:cover;right:130px;bottom:150px;z-index:999999;}
+.phone-ico{background:url(img/phone.png) no-repeat;width:60px;height:60px;position:fixed;background-size:cover;right:130px;bottom:150px;z-index: 999;}
 @media screen and (max-width:900px){.phone-ico{right:13px;}
 }
 
