--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ footer,
 header,
 nav,
 section{display:block;}
-h1{font-size:2em;margin:0.67em 0;}
+h1{font-size: 3em;margin:0.67em 0;}
 figcaption,
 figure,
 main{display:block;}
@@ -73,51 +73,209 @@ summary{display:list-item;}
 canvas{display:inline-block;}
 template{display:none;}
 [hidden]{display:none;}
-@media screen and (min-width:901px){html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;min-width:1140px;width:100%;}
-@media screen and (max-width:900px){html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;min-width:500px;}
-.block-content{min-width:320px;margin:0;}
-}
-body{background-image:url(img/overlay.png), linear-gradient(45deg, #191f39 15%, #474d61 85%);font-family:'bazhanovc';}
-.block-content{max-width:1140px;margin:auto;}
+
+.gheader{
+    font-size: 2em;
+    font-weight:  bold;
+    padding: 40px 0;
+    text-align:  center;
 }
 .clear{clear:both;}
-.black-head{text-align:center;color:white;font-size:32px;font-weight:bold;text-transform:uppercase;padding:20px 0px;}
+html{
+	line-height:1.15;
+	-ms-text-size-adjust:100%;
+	-webkit-text-size-adjust:100%;
+	min-width: 320px;
+	} 
+@media screen and (min-width:901px){
+	
+ .sb{padding: 0 20px;font-size: 30px;text-align: left;}
+ }
+@media screen and (max-width:900px){ 
+.block-content{min-width: 600px;margin:0;}
+}
+ 
+body{
+	background-image:url(img/overlay.png), linear-gradient(45deg, #191f39 15%, #474d61 85%);
+	font-family:'bazhanovc';
+	}
+.block-content{
+	max-width:1140px;
+	margin:auto;
+	min-width: 500px;
+	padding-bottom: 30px;
+	}
+}
+
+.black-head{
+	text-align:center;color:white;font-size:32px;font-weight:bold;text-transform:uppercase;padding:20px 0px;}
 .header{text-align:center;padding:20px;font-size:32px;font-weight:bold;}
-.sub-header{text-align:center;font-size:20px;}
+.sub-header{text-align:center;font-size:20px;padding-bottom:  30px;}
 .pull-left{float:left;}
 .pull-right{float:right;}
 .bg-white{background:white;}
 .bg-black{background:black;}
+.bg-contact{
+    background: #151414;
+}
 @font-face{font-family:'bazhanovcregular';src:url('bazhanovc-webfont.woff2') format('woff2'),
 url('bazhanovc-webfont.woff') format('woff');font-weight:normal;font-style:normal;}
 @font-face{font-family:'bazhanovcbold';src:url('bazhanovc-bold-webfont.woff2') format('woff2'),
 url('bazhanovc-bold-webfont.woff') format('woff');font-weight:normal;font-style:normal;}
 .phone-ico{background:url(img/phone.png) no-repeat;width:60px;height:60px;position:fixed;background-size:cover;right:130px;bottom:150px;z-index: 999;}
-@media screen and (max-width:900px){.phone-ico{right:13px;}
-}
 
+@media screen and (max-width:900px){
+	.phone-ico{right:13px;}
+	.phone{display:block;}
+	.sb{
+    font-size: 22px;
+    padding-bottom: 25px;
+}
+}@media screen and (min-width:900px){
+	.phone{display:none;};
+}
 .block-head{padding-top:50px;}
-.block-head .head-foto{background:url(img/Sneg-1.jpg)no-repeat 18% 50%;width:100%;height:300px;background-size:cover;}
+.block-head .head-foto{background:url(img/Sneg-1.jpg)no-repeat 18% 50%;/* width:100%; */height:300px;background-size:cover;}
 .block-head .about{background:white;}
-.block-head .ab-left{float:left;width:60%;}
+.block-head .ab-left{float:left;width: 50%;}
 .block-head .ab-text{text-align:center;margin:auto;}
-.block-head .ab-foto{background:url(img/My.jpg)no-repeat;width:40%;float:right;height:670px;background-size:100%;}
-@media screen and (max-width:900px){.block-head{padding-top:0;}
-.block-head .ab-foto{height:216px;}
+.block-head .ab-foto{background:url(img/My.jpg)no-repeat;width: 50%;float:right;min-height: 883px;height: 100%;background-size: cover;}
+@media screen and (max-width:900px){
+.block-head{padding-top:0;}
+.block-head .ab-foto{/* height: 429px; */float:  none;width: 100%;display:  none;}
+.block-head .ab-left{
+    float:  none;
+    width: 100%;
+    /* padding: 0 40px; */
+}
 }
 .block-menu{}
-.block-menu .m-logo{display:block;text-decoration:none;color:black;margin:auto;text-align:center;font-weight:bold;}
+.block-menu .m-logo{
+	display:block;
+	text-decoration:none;
+	color:black;/* margin:auto; */
+	text-align:center;
+	font-weight:bold;
+	}
 .block-menu .menu{background:#f7f7f7;padding:30px 0px;}
 .block-menu .m-logo:hover{border-radius:50px;background:#bfafaf;}
 .block-menu .m-elem{float:left;width:33.3%;}
+.block-menu .m-foto{
+    width: 65px;
+    margin:  auto;
+}
+.block-menu .m-vid{
+    width: 70px;
+    margin: auto;
+}
+.block-menu .m-con{
+    width: 115px;
+    margin: auto;
+}
+
+
 .block-retro{}
 .block-retro .elem{background:black;padding-bottom:30px;}
 .block-retro .foto{background:url(img/foto.jpg) no-repeat;width:47%;height:335px;margin-left:20px;background-size:cover;}
 .block-retro .video{background:url(img/vid.jpg) no-repeat;width:47%;height:335px;background-size:cover;margin-right:20px;}
-@media screen and (max-width:900px){.block-retro .foto{width:100%;background-size:100%;height:227px;margin:0;}
+@media screen and (max-width:900px){
+	 
+.block-retro .foto{width:100%;background-size:100%;height:227px;margin:0;}
 .block-retro .video{width:100%;background-size:100%;height:227px;margin:0;}
 }
-.block-foto{position:relative;}
+.block-foto{position:relative;text-align:  center;}
 .block-foto .album{position:relative;background:black;}
 .block-foto .elem{width:33%;float:left;}
 .block-foto .image{margin:auto;display:block;}
+
+
+.block-video{color:white;/* margin-bottom: 40px; */}
+.block-video .reklamaz{
+   margin:  auto;
+ 
+}
+.video{width:500px;}
+.block-video .elem{
+    padding-top:  30px;
+}
+.block-video .report{ margin:  auto;}
+ 
+.block-video .corp{ margin:  auto;}
+ 
+.block-video .marry{ margin:  auto;}
+ 
+@media screen and (min-width:901px){
+.block-video .reklamaz{
+  width: 640px;}
+  .video{width:640px;}
+}
+.block-contact{
+	color:  white;
+	padding-bottom: 100px;
+}
+.block-contact .element-shema{
+    width: 31%;
+    float: left;
+    padding: 1% 1% 0 1%;
+}
+.block-contact .social {
+    width: 352px;
+    margin:  auto;
+}
+.block-contact .social .header {}
+.block-contact .social .ico-list{
+    width: 265px;
+    margin:  auto;
+}
+.block-contact .logo {
+   margin:  auto;
+   width: 158px;
+   padding-top:  20px;
+   }
+.block-contact .logo .foto{ background: url(img/icons/logo-w.png) no-repeat;
+    width: 160px;
+    height: 148px;}	
+.block-contact .contact {
+    padding-top: 40px;
+    width: 265px;
+    margin: auto;
+}
+.block-contact .contact .phonex {
+    width: 201px;
+    margin: 12px;
+    }
+.block-contact .contact .phonex .value{
+    font-size: 20px;
+    float: left;
+    margin-top: 22px;
+    margin-left: 50px;
+    color: #ffffff;
+    font-weight: 600;
+    }
+.block-contact .contact .phonex .img {
+    background: url(img/icons/phone-w.png) no-repeat;
+    width: 40px;
+    height: 40px;
+}
+.block-contact .icon-social{
+    width: 65px;
+    height: 65px;
+    float:  left;
+}
+
+.fb{
+    background: url(img/icons/fb.png) no-repeat;
+}
+.vk{  background: url(img/icons/vk.png) no-repeat;}
+.in{  background: url(img/icons/inst.png) no-repeat;}
+.vm{background: url(img/icons/vimeo.png) no-repeat;}
+
+
+@media screen and (max-width: 900px){
+	.block-contact .element-shema {
+    width: 100%;
+    float: left;
+    padding: 1% 0 0 1%;
+    margin: auto;
+	}
+}
